--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
     <!-- Nav Bar -->
     <div class="nav-bar">
+        <div class="nav-bar-links">
             <a href="#" class="nav-link"><div class="nav-button">About</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Projects</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Resume</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
         </div>
+    </div>
 
     <div class="home-section">
 
@@ -28,10 +30,6 @@
             <a href="#"><div class="button"><div class="button-text">Resume</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Contact</div></div></a>
         </div>
-    </div>
-    <!-- About me section goes here -->
-    <div class="about-me-section" id="about-me">
-        <object data="html/aboutMe.html" type="text/html" style="width: 100%;"></object>
     </div>
 </body>
 </html>
