new aboutme page

--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -1,16 +1,21 @@
-<link rel="stylesheet" type="text/css" media="screen" href="../css/aboutMeStyle.css" />
-<div class="body-container">
-    <div class="main-text">
-        I am an aspiring Software Developer. Random text here
-        All I can do right now is hope that I remember to actually
-        change all of this to something real before I show someone
-    </div>
-    <div class="sub-text st2">
-        Hey this is some subtext. Something cool about me should 
-        go here. Not sure what is cool about me yet though.
-    </div>
-    <div class="sub-text st1">
-        Hey this is some subtext. Something cool about me should 
-        go here. Not sure what is cool about me yet though.
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/aboutMeStyle.css" />
+    <script src="main.js"></script>
+</head>
+    <body>
+        <div class="main">
+            <div class="title">
+
+            </div>
+            <div class="text">
+                 
+            </div> 
+        </div>
+    </body>
+</html>
