--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Arek Fielding</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/indexStyle.css" />
+    <link rel="stylesheet" href="css/nav.css">
+
     <!-- <script src="main.js"></script> -->
 </head>
 <body>
