--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -3,19 +3,60 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/aboutMeStyle.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="../css/nav.css">
+    <script src="../js/jquery-3.3.1.min.js"></script>
+
 </head>
     <body>
+        <div class="nav-bar">
+            <div class="nav-bar-links">
+                <a href="#" class="nav-link"><div class="nav-button">About</div></a>
+                <a href="#" class="nav-link"><div class="nav-button">Projects</div></a>
+                <a href="#" class="nav-link"><div class="nav-button">Resume</div></a>
+                <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
+            </div>
+        </div>
+        
         <div class="main">
             <div class="title">
-
+                About Me
             </div>
             <div class="text">
-                 
+                The only place where you could use pt (or cm or in) for setting a font size is in style sheets for print, if you need to be sure the printed font is exactly a certain size. But even there using the default font size is usually better.
             </div> 
+
+            <div class="interests-title">
+                Interests
+            </div>
+            <div class="interests-section">
+                <div class="interest-entry">
+                    Interest #1: What do you think happens if I type out a super long description for one of my interests? Will it 
+                    <div class="interest-pop-up">
+                        Hey this is text for my interest
+                    </div>
+                </div>
+                <hr>
+                <div class="interest-entry">
+                    Interest #1
+                    <div class="interest-pop-up">
+                        Hey this is text for my interest
+                    </div>
+                </div>
+                <hr>
+                <div class="interest-entry">
+                    Interest #1
+                    <div class="interest-pop-up">
+                        Hey this is text for my interest
+                    </div>
+                </div>
+                <hr>
+
+            </div>
         </div>
     </body>
+    <script src="../js/aboutMe.js"></script>
+
 </html>
