--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -13,7 +13,7 @@
     <body>
         <div class="nav-bar">
             <div class="nav-bar-links">
-                <a href="#" class="nav-link"><div class="nav-button">About</div></a>
+                <a href="aboutMe.html" class="nav-link"><div class="nav-button">About</div></a>
                 <a href="#" class="nav-link"><div class="nav-button">Projects</div></a>
                 <a href="#" class="nav-link"><div class="nav-button">Resume</div></a>
                 <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
@@ -25,31 +25,37 @@
                 About Me
             </div>
             <div class="text">
-                The only place where you could use pt (or cm or in) for setting a font size is in style sheets for print, if you need to be sure the printed font is exactly a certain size. But even there using the default font size is usually better.
+                I am currently in my 3rd year at the University of Western Ontario in London Ontario, Canada. Majoring in
+                Software Engineering, I am  seeking open opportunities at innovative companies. Along with programming,
+                I also enjoy martial arts, video games, heist movies, and playing with my cat. 
             </div> 
 
             <div class="interests-title">
-                Interests
+                Key Skills/Interests
+                <!-- <div class="interests-subtitle">
+                    Click on them to be taken to something relavent
+                </div> -->
             </div>
             <div class="interests-section">
-                <div class="interest-entry">
-                    Interest #1: What do you think happens if I type out a super long description for one of my interests? Will it 
+                <a class="interest-entry">
+                    <b>Web Development:</b> From server to CSS I do it all. Or at least do my best
                     <div class="interest-pop-up">
-                        Hey this is text for my interest
+                        Hey you haven't clicked away yet. I can't be terrible.
+                    </div>
+                </a>
+                <hr>
+                <div class="interest-entry">
+                    <b>User Interfacing Applications:</b> One of my main personal projects is a discord(a messaging server) 
+                    bot. I enjoy creating things that people will use.
+                    <div class="interest-pop-up">
+                        Discord bot is listed under my projects page. Hint hint.
                     </div>
                 </div>
                 <hr>
                 <div class="interest-entry">
-                    Interest #1
+                    <b>Trying to be witty:</b> I try. Does that count for something?
                     <div class="interest-pop-up">
-                        Hey this is text for my interest
-                    </div>
-                </div>
-                <hr>
-                <div class="interest-entry">
-                    Interest #1
-                    <div class="interest-pop-up">
-                        Hey this is text for my interest
+                        I really am trying here.
                     </div>
                 </div>
                 <hr>
