--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Hello World
         </div>
         <div class="button-container">
-            <a href="#about-me"><div class="button"><div class="button-text">About Me</div></div></a>
+            <a href="/html/aboutMe.html"><div class="button"><div class="button-text">About Me</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Projects</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Resume</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Contact</div></div></a>
