--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -14,7 +14,7 @@
         <div class="nav-bar">
             <div class="nav-bar-links">
                 <a href="aboutMe.html" class="nav-link"><div class="nav-button">About</div></a>
-                <a href="#" class="nav-link"><div class="nav-button">Projects</div></a>
+                <a href="projects.html" class="nav-link"><div class="nav-button">Projects</div></a>
                 <a href="#" class="nav-link"><div class="nav-button">Resume</div></a>
                 <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
             </div>
