--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="button-container">
             <a href="html/aboutMe.html"><div class="button"><div class="button-text">About Me</div></div></a>
-            <a href="#"><div class="button"><div class="button-text">Projects</div></div></a>
+            <a href="html/projects.html"><div class="button"><div class="button-text">Projects</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Resume</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Contact</div></div></a>
         </div>
