--- a/html/projects.html
+++ b/html/projects.html
@@ -24,11 +24,25 @@
         </div>
         <!-- Projects diplay section -->
         <div class="projects-panel" id="projects-panel">
-            <div class="project-pane" id="project-1"></div>
-            <div class="project-pane" id="project-2"></div>
-            <div class="project-pane" id="project-3"></div>
+            <div class="project-pane" id="project-1" data-label="Discord Bot"></div>
+            <div class="project-pane" id="project-2" data-label="Riot"></div>
+            <div class="project-pane" id="project-3" data-label="Testing"></div>
         </div>
-
+        <!-- TextDisplay Section -->
+        <div class="projects-text-panel">
+            <div class="project-title" id="project-title">
+                Temp Title
+            </div>
+            <div class="project-techs">
+                <ul class="techs-list" id="project-techs">
+                    <li class="tech-item">Item 1</li>
+                    <li class="tech-item">Item 1</li>
+                </ul>
+            </div>
+            <div class="project-description" id="project-description">
+                Descript
+            </div>
+        </div>
     </div> 
 </body>
 <script src="../js/projects.js"></script>
