nav bar updates and grid spacing

--- a/html/projects.html
+++ b/html/projects.html
@@ -12,8 +12,8 @@
 <body>
     <div class="nav-bar">
         <div class="nav-bar-links">
-            <a href="#" class="nav-link"><div class="nav-button">About</div></a>
-            <a href="#" class="nav-link"><div class="nav-button">Projects</div></a>
+            <a href="aboutMe.html" class="nav-link"><div class="nav-button">About</div></a>
+            <a href="projects.html" class="nav-link"><div class="nav-button">Projects</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Resume</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
         </div>
@@ -24,9 +24,9 @@
         </div>
         <!-- Projects diplay section -->
         <div class="projects-panel" id="projects-panel">
-            <div class="project-pane" id="project-1" data-label="Discord Bot"></div>
-            <div class="project-pane" id="project-2" data-label="Riot"></div>
-            <div class="project-pane" id="project-3" data-label="Testing"></div>
+            <div class="project-pane" id="project-1" data-label="Earlebot"></div>
+            <div class="project-pane" id="project-2" data-label="Riot-API"></div>
+            <div class="project-pane" id="project-3" data-label="Profile-Site"></div>
         </div>
         <!-- TextDisplay Section -->
         <div class="projects-text-panel">
