--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- Nav Bar -->
     <div class="nav-bar">
         <div class="nav-bar-links">
-            <a href="#" class="nav-link"><div class="nav-button">About</div></a>
-            <a href="#" class="nav-link"><div class="nav-button">Projects</div></a>
-            <a href="#" class="nav-link"><div class="nav-button">Resume</div></a>
+            <a href="html/aboutMe.html" class="nav-link"><div class="nav-button">About</div></a>
+            <a href="html/projects.html" class="nav-link"><div class="nav-button">Projects</div></a>
+            <a href="static/Resume.pdf" class="nav-link"><div class="nav-button">Resume</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
         </div>
     </div>
@@ -29,7 +29,7 @@
         <div class="button-container">
             <a href="html/aboutMe.html"><div class="button"><div class="button-text">About Me</div></div></a>
             <a href="html/projects.html"><div class="button"><div class="button-text">Projects</div></div></a>
-            <a href="#"><div class="button"><div class="button-text">Resume</div></div></a>
+            <a href="static/Resume.pdf"><div class="button"><div class="button-text">Resume</div></div></a>
             <a href="#"><div class="button"><div class="button-text">Contact</div></div></a>
         </div>
     </div>
