--- a/html/projects.html
+++ b/html/projects.html
@@ -14,7 +14,7 @@
         <div class="nav-bar-links">
             <a href="aboutMe.html" class="nav-link"><div class="nav-button">About</div></a>
             <a href="projects.html" class="nav-link"><div class="nav-button">Projects</div></a>
-            <a href="../static/Resume.pdf" class="nav-link"><div class="nav-button">Resume</div></a>
+            <a href="../static/Resume.pdf" class="nav-link" target="_blank"><div class="nav-button">Resume</div></a>
             <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
         </div>
     </div>
