added some formatting on projects page

--- a/html/projects.html
+++ b/html/projects.html
@@ -34,6 +34,8 @@
                 Temp Title
             </div>
             <div class="project-techs">
+                <div class="techs-title">Technologies Used</div>
+                <hr>
                 <ul class="techs-list" id="project-techs">
                     <li class="tech-item">Item 1</li>
                     <li class="tech-item">Item 1</li>
