--- a/html/projects.html
+++ b/html/projects.html
@@ -30,9 +30,9 @@
         </div>
         <!-- TextDisplay Section -->
         <div class="projects-text-panel">
-            <div class="project-title" id="project-title">
+            <a class="project-title" id="project-title">
                 Temp Title
-            </div>
+            </a>
             <div class="project-techs">
                 <div class="techs-title">Technologies Used</div>
                 <hr>
@@ -44,7 +44,7 @@
             <div class="project-description" id="project-description">
                 Descript
             </div>
-        </div>
+        </a>
     </div> 
 </body>
 <script src="../js/projects.js"></script>
