--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -14,9 +14,9 @@
         <div class="nav-bar">
             <div class="nav-bar-links">
                 <a href="../index.html" class="nav-link"><div class="nav-button">Home</div></a>
+                <a href="aboutMe.html" class="nav-link"><div class="nav-button">About</div></a>
                 <a href="projects.html" class="nav-link"><div class="nav-button">Projects</div></a>
                 <a href="../static/Resume.pdf" class="nav-link" target="_blank"><div class="nav-button">Resume</div></a>
-                <a href="#" class="nav-link"><div class="nav-button">Contact</div></a>
             </div>
         </div>
         
